xfburn 0.x
==========

- Use libburn (libburnia-project.org) instead of cdrecord tools
- Avoid adding non regular files (bug #2179)
- Directory are sort before files in data composition
- Fix segfault when removing a file and one of its parent directory together
- Try to use media-optical and media-cdrom as themable icon before gtk-cdrom in order to avoid crappy png icon being shown in Preferences dialog
- Fix icon size in filesystem browser
- Add icons for actions based on icons from the Tango icontheme
- Detect and sort supported write speeds (#4012)
- Add support for writing ISO from a composition using libburn
- Add support for burning a composition using libburn
- Use correct cdrom size (bug #2753)
- Add new icons based on icons from the Tango icontheme
- List columns are resizable now (bug #2930)
- Disable "Burn composition" button where there is no files in composition

xfburn 0.2.0beta
================

- Use g_type_class_add_private everywhere
- Data composition and file browser use ExoTreeView instead of GtkTreeView
- Add DnD inside data composition
- Prevent having two 'New directory' entries in a data composition
- Add support of SAO mode (bug #2121)
- Add create directory action in data composition
- Prevent usage of empty filename in data composition
- Fix xfburn.desktop Categories entry as suggested by Charles A Edwards <eslrahc@bellsouth.net>
- Implement the add button in the data composition toolbar (bug #2097)
- Avoid segfault on exit when ~/.config/xfburn doesn't exist (bug #2095)
- Prevent cdrecord failure if there is a space in the path to an iso (bug #1198)

xfburn 0.1.0alpha
=================

- First public release
- Supports cdrw blanking, cd copying, creating iso, composition of files
