@@ -15,6 +15,7 @@ xfburn 0.x
 - Add new icons based on icons from the Tango icontheme
 - List columns are resizable now (bug #2930)
 - Disable "Burn composition" button where there is no files in composition
+- Use HAL to update disc status when a disc is inserted / removed
 
 xfburn 0.2.0beta
 ================
